<resources>
    <string name="app_name">Neji</string>
    <string name="add_box_name">ボックス名</string>
    <string name="add_box_qr_code_prefix">QRコード: </string>
    <string name="add_box_no_data">データなし</string>
    <string name="add_box_scan">スキャン</string>
    <string name="add_region_name">リージョン名</string>
    <string name="add_category_name">カテゴリ名</string>
    <string name="setup_hint_firebase_project_id">FirebaseのプロジェクトID <font color='#FF0000'>*</font></string>
    <string name="setup_hint_firebase_api_key">FirebaseのAPIキー <font color='#FF0000'>*</font></string>
    <string name="setup_hint_firebase_application_id">FirebaseのアプリID <font color='#FF0000'>*</font></string>
    <string name="setup_hint_email">Email <font color='#FF0000'>*</font></string>
    <string name="setup_hint_password">Password <font color='#FF0000'>*</font></string>
    <string name="setup_text_login">Login</string>
    <string name="region_list_card_box_amount">%dボックス</string>
    <string name="box_list_card_item_amount">%d種</string>
    <string name="edit_item_name">アイテム名</string>
    <string name="edit_item_amount">個数</string>
    <string name="edit_item_category">アイテムのカテゴリ</string>
    <string name="edit_item_comment">コメント</string>
    <string name="edit_item_region_of_box">ボックスのある場所</string>
    <string name="edit_item_box_to_save">保存するボックス</string>
    <string name="edit_item_complete">完了</string>
    <string name="search_element_name">検索要素 - 名前</string>
    <string name="search_element_item_category">検索要素 - アイテムのカテゴリ</string>
    <string name="search_element_region">検索要素 - アイテムのある場所</string>
    <string name="search_element_box">検索要素 - アイテムのあるボックス</string>
    <string name="search_searching">検索</string>
    <string name="item_info_amount">個数: </string>
    <string name="error_must_not_be_blank">値を入力してください</string>
    <string name="error_must_be_integer_and_at_least_zero">0以上の整数にしてください</string>
    <string name="snackbar_success_sign_in">ログインに成功しました</string>
    <string name="snackbar_invalid_value">エラー: 不正な値が存在します</string>
    <string name="snackbar_must_not_be_blank">エラー: 空欄が存在します</string>
    <string name="dialog_title_delete">削除</string>
    <string name="dialog_alert_on_deleting_item">本当に削除しますか?</string>
    <string name="dialog_alert_on_deleting_box">このボックスが持つアイテムはすべて削除されますが、本当に削除しますか?</string>
    <string name="dialog_alert_on_deleting_region">このリージョンが持つボックス及びアイテムはすべて削除されますが、本当に削除しますか?</string>
    <string name="dialog_alert_on_deleting_category">このカテゴリを割り当てられているアイテムのカテゴリはなしになりますが、本当に削除しますか? </string>
    <string name="button_complete">完了</string>
    <string name="button_delete">削除する</string>
    <string name="nav_name_region_list">場所一覧</string>
    <string name="nav_name_box_list">ボックス一覧</string>
    <string name="nav_name_edit_item">アイテムの編集</string>
    <string name="nav_name_search_item">アイテムの検索</string>
    <string name="nav_name_search_result">検索結果</string>
    <string name="nav_name_item_info">アイテム情報</string>
    <string name="nav_name_add_region">リージョンの追加</string>
    <string name="nav_name_add_box">ボックスの追加</string>
    <string name="nav_name_item_list">アイテム一覧</string>
    <string name="nav_name_add_item">アイテム追加</string>
    <string name="nav_name_scan_qrcode">QRコードスキャン</string>
    <string name="nav_name_category_list">カテゴリ一覧</string>
    <string name="nav_name_category">カテゴリの追加</string>
    <string name="menu_item_add_region">リージョンの追加</string>
    <string name="menu_item_add_item">アイテムの追加</string>
    <string name="menu_item_show_qr_code">QRコードの表示</string>
    <string name="menu_item_edit_item">アイテムの編集</string>
    <string name="menu_item_add_category">カテゴリーの追加</string>
</resources>