<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/item_photo_background"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="@id/image_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_item"
            app:srcCompat="@drawable/ic_baseline_add_24"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:hint="@string/edit_item_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_item">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_item_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/edit_item_amount"
            app:layout_constraintEnd_toStartOf="@id/space_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_item_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_item_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:text="1"
                tools:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:id="@+id/space_amount"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="@id/input_item_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/input_item_amount"
            app:layout_constraintTop_toTopOf="@id/input_item_amount" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_item_category"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/edit_item_category"
            app:layout_constraintEnd_toStartOf="@id/button_edit_categories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_item_amount">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/auto_complete_text_item_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/button_edit_categories"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_large"
            android:background="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="@id/input_item_category"
            app:layout_constraintEnd_toStartOf="@id/button_unselect_category"
            app:layout_constraintStart_toEndOf="@id/input_item_category"
            app:layout_constraintTop_toTopOf="@id/input_item_category"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/button_unselect_category"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@drawable/ic_baseline_remove_24"
            app:layout_constraintBottom_toBottomOf="@id/input_item_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_edit_categories"
            app:layout_constraintTop_toTopOf="@id/input_item_category"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_region_of_box"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/edit_item_region_of_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_item_category">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/auto_complete_text_region_of_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_box_to_save"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:enabled="false"
            android:hint="@string/edit_item_box_to_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_region_of_box">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/auto_complete_text_box_to_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_item_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/edit_item_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_box_to_save">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_item_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/edit_item_complete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_item_comment"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>